# docs-embedder

./: .clang-tidy  CMakeLists.txt  README.md
include/: docs_embedder.h
src/docs-embedder/: docs_embedder.c
